adding images to slider

--- a/public/index.html
+++ b/public/index.html
@@ -136,29 +136,101 @@
           <div class="slideshow-container border border-warning">
 
             <div class="mySlides">
-              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Languages</h4>
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">SKILLS</h4>
               <div style="padding-top:15px;">
-                <img class="imgstyle zoom" src="assets/images/lan/1.png" />
+                <img class="imgstyle zoom" src="assets/images/lan/7.png" />&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/8.png" />&nbsp
                 <img class="imgstyle zoom" src="assets/images/lan/6.png" />
-                <img class="imgstyle zoom" src="assets/images/lan/7.png" />
 
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/1.png" />&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/9.png" />&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/10.png" />
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/2.png" />
+                <img class="imgstyle zoom" src="assets/images/lan/3.jpg" />&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/4.png" />
+              </div>
+
+            </div>
+
+            <div class="mySlides">
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">SKILLS</h4>
+              <div style="padding-top:15px;">
+                <img class="imgstyle zoom" src="assets/images/lan/26.png" />&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/5.png" />&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/15.png" />
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/20.png" />&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/21.png" />&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/22.jpg" />
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/24.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/14.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/27.png" />
+
+              </div>
+            </div>
+
+            <div class="mySlides">
+
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">SKILLS</h4>
+              <div style="padding-top:15px;">
+                <img class="imgstyle zoom" src="assets/images/lan/28.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/31.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/23.png" />
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/29.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/32.jpe" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/30.jpg" />
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/12.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/13.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/39.png" />
               </div>
               <div>
-                <img class="imgstyle zoom" src="assets/images/lan/8.png" />
-                <img class="imgstyle zoom" src="assets/images/lan/9.png" />
-                <img class="imgstyle zoom" src="assets/images/lan/10.png" />
               </div>
-
             </div>
 
             <div class="mySlides">
-              <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-              <p class="author">- Ernest Hemingway</p>
+
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">SKILLS</h4>
+              <div style="padding-top:15px;">
+                <img class="imgstyle zoom" src="assets/images/lan/16.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/17.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/18.png" />
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/19.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/37.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/38.png" />
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/25.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/33.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/34.png" />
+              </div>
+              <div>
+              </div>
             </div>
 
             <div class="mySlides">
-              <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-              <p class="author">- Thomas A. Edison</p>
+
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">SKILLS</h4>
+              <div style="padding-top:15px;">
+                <img class="imgstyle zoom" src="assets/images/lan/35.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/36.jpg" />
+              </div><br />
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/40.png" />&nbsp&nbsp
+                <img class="imgstyle zoom" src="assets/images/lan/11.png" />
+              </div>
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
