adding edu updates

--- a/public/index.html
+++ b/public/index.html
@@ -279,31 +279,44 @@
 
             <div class="container">
               <div class="row pad-edu">
-              <div class="col-sm border border-warning">Master Of Computer Applications<label id="mca-toggle" class="false collapsed" onclick="changeText1()" data-toggle="collapse" data-target="#mca" style="float: right">Expand</label></div>
+              <div class="col-sm border border-warning">Post Graduation<label id="mca-toggle" class="false collapsed" onclick="changeText1()" data-toggle="collapse" data-target="#mca" style="float: right">Expand</label></div>
                </div>
               <div id="mca" class="collapse">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <h5>Master of Computer Applications,</h5>
+                <h6>Bharathiar University, Coimbatore.</h6>
+                <h6>2014 - 2017</h6>
+                <p><strong>CGPA : 7.1</strong></p>
               </div>
             </div>
 
             <div class="container">
                 <div class="row pad-edu">
-                <div class="col-sm border border-warning">Bachelor Of Computer Applications<label id="bca-toggle" class="false collapsed" onclick="changeText2()" data-toggle="collapse" data-target="#bca" style="float: right">Expand</label></div>
+                <div class="col-sm border border-warning">Under Graduation<label id="bca-toggle" class="false collapsed" onclick="changeText2()" data-toggle="collapse" data-target="#bca" style="float: right">Expand</label></div>
               </div>
                 <div id="bca" class="collapse">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    <h5>Bachelor of Computer Applications,</h5>
+                    <h6>VLB Janakiammal College of Arts and Science, Coimbatore.</h6>
+                    <h6>2011 - 2014</h6>
+                    <p><strong>CGPA : 8.5</strong></p>
                 </div>
               </div>
 
               <div class="container">
                   <div class="row pad-edu">
-                  <div class="col-sm border border-warning">Higher Secondary Certificate<label id="hsc-toggle" class="false collapsed" onclick="changeText3()" data-toggle="collapse" data-target="#hsc" style="float: right">Expand</label></div>
+                  <div class="col-sm border border-warning">High School<label id="hsc-toggle" class="false collapsed" onclick="changeText3()" data-toggle="collapse" data-target="#hsc" style="float: right">Expand</label></div>
                 </div>
                   <div id="hsc" class="collapse">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      <h5>Higher Secondary Certificate,</h5>
+                      <h6>Infant Jesus Matriculation Higher Secondary School, Coimbatore.</h6>
+                      <h6>2010 - 2011</h6>
+                      <h6>Computer Science</h6>
+                      <p><strong>CGPA : 7.0</strong></p>
+                  </br>
+                  <h5>Secondary School Certificate,</h5>
+                      <h6>Infant Jesus Matriculation Higher Secondary School, Coimbatore.</h6>
+                      <h6>2008 - 2009</h6>
+                      <h6>Matriculation</h6>
+                      <p><strong>CGPA : 7.2</strong></p>
                   </div>
                 </div>
                 </div>
