--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,48 @@
 
   <div class="border border-warning shadow">
     <div class="container-color section-padding" id="about">
-      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">ABOUT</button>
-      <div class="bgimg-1"> </div>
+      <button style="border-radius: 0 !important;" type="button" class="border-right-0 border-top-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">ABOUT</button>
+      <!-- <div class="bgimg-1"> </div> -->
+      <div id="demo" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="assets/images/k1.jpg" alt="Los Angeles" >
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/k2.jpg" alt="Chicago" >
+          </div>
+          <div class="carousel-item">
+            <img src="assets/images/k3.jpg" alt="New York" >
+          </div>
+        </div>
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+
+
+
       <div class="row padding">
         <div class="col-sm text-center text-white ">
           <h1 class="display-4 ">Karthick Arunachalam</h1>
-          <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+          <p class="lead ">Expertise Selenium Java/JavaScript Automation Framework Developer in Quality Engineering.</p>
+          <div class="col">
+            <a target="_blank" href="https://www.facebook.com/KarthiCk.N.A"><img class="icon-zoom" src="assets/images/lan/fb.png" alt="Facebook Icon"></a>&nbsp&nbsp
+            <a target="_blank" href="https://github.com/karthicksoftware"><img class="icon-zoom" src="assets/images/lan/git.png" alt="Github Icon"></a>&nbsp&nbsp
+            <a target="_blank" href="https://www.instagram.com/juzhangonwid_k/"><img class="icon-zoom" src="assets/images/lan/insta.png" alt="Instagram Icon"></a>&nbsp&nbsp
+            <a target="_blank" href="https://in.linkedin.com/in/karthick-arunachalam-284aa9126"><img class="icon-zoom" src="assets/images/lan/link.png" alt="Linkedin Icon"></a>
+          </div>
         </div>
       </div>
     </div>
@@ -55,7 +91,7 @@
                 <div class="card border-warning" style="width: 19rem;">
                   <img class="card-img-top" src="assets/images/sts.jpg" alt="Card image cap">
                   <div class="card-body card-padding">
-                    <h5 class="card-title">Test Automation Engineer II</h5>
+                    <h5 class="card-title">Test Automation Engineer</h5>
                     <p class="card-text">Currently working as a Test Automation Engineer. I belongs to PCH Agile team. </p>
                     <p class="card-text">27th Dec, 2016 - Present</p>
                     <!--<button id="more-button1" class="btn btn-primary">More Info</button>-->
@@ -142,13 +178,13 @@
 
     <div class="container-color section-padding" id="skills">
       <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">SKILLS</button>
-      <div class="bgimg-1"></div>
+      <div class="bgimg-2"></div>
       <div class="padding justify-content-center card-padding bg-azure exp-pad rowbg" style="padding-left:15%; padding-right:15%">
         <div class="col-lg-12 card-padding  border border-warning">
           <div class="slideshow-container border border-warning">
 
             <div class="mySlides">
-                <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & technologies</h4>
+                <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & Frameworks</h4>
               <div style="padding-top:15px;">
                 <img class="imgstyle zoom" src="assets/images/lan/7.png" />&nbsp
                 <img class="imgstyle zoom" src="assets/images/lan/8.png" />&nbsp
@@ -171,7 +207,7 @@
             </div>
 
             <div class="mySlides">
-              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & technologies</h4>
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & Frameworks</h4>
               <div style="padding-top:15px;">
                 <img class="imgstyle zoom" src="assets/images/lan/26.png" />&nbsp
                 <img class="imgstyle zoom" src="assets/images/lan/5.png" />&nbsp
@@ -194,7 +230,7 @@
 
             <div class="mySlides">
 
-              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & technologies</h4>
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & Frameworks</h4>
               <div style="padding-top:15px;">
                 <img class="imgstyle zoom" src="assets/images/lan/28.png" />&nbsp&nbsp
                 <img class="imgstyle zoom" src="assets/images/lan/31.png" />&nbsp&nbsp
@@ -218,7 +254,7 @@
 
             <div class="mySlides">
 
-              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & technologies</h4>
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & Frameworks</h4>
               <div style="padding-top:15px;">
                 <img class="imgstyle zoom" src="assets/images/lan/16.png" />&nbsp&nbsp
                 <img class="imgstyle zoom" src="assets/images/lan/17.png" />&nbsp&nbsp
@@ -242,7 +278,7 @@
 
             <div class="mySlides">
 
-              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & technologies</h4>
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Tools & Frameworks</h4>
               <div style="padding-top:15px;">
                 <img class="imgstyle zoom" src="assets/images/lan/35.png" />&nbsp&nbsp
                 <img class="imgstyle zoom" src="assets/images/lan/36.jpg" />
@@ -272,7 +308,7 @@
 
     <div class="container-color section-padding " id="education">
       <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">EDUCATION</button>
-      <div class="bgimg-1"></div>
+      <div class="bgimg-3"></div>
       <div class="padding justify-content-center card-padding bg-azure exp-pad rowbg" style="padding-left:15%; padding-right:15%">
           <div class="col-lg-12 card-padding">
           <div class="col-lg-12 card-padding border border-warning text-white">
@@ -327,7 +363,7 @@
 
     <div class="col-lg border-top border-bottom border-warning" style="background-color:black;">
       <p class="text-center text-white">
-          © 2018 Github Pages. All rights received. Powered by Github.io
+          © 2018 Powered by Github Pages. All rights received.
       </p>
     </div>
   </div>
